--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -3,5 +3,8 @@
  <p>ショップ名:<%=@post_image.shop_name%></p>
  <p>説明:<%=image_tag 'sample-author1.jpg' %></p>
  <p>投稿ユーザーネーム<%= @post_image.user.name %></p>
- <p>投稿日：<%= @post_image.created_at.strftime('%Y/%m/%d') %></p></p>  
+ <p>投稿日：<%= @post_image.created_at.strftime('%Y/%m/%d') %></p>
+  <% if @post_image.user == current_user %>
+    <%= link_to "削除", post_image_path(@post_image), method: :delete %>
+  <% end %>
 </div>
